# amorce

./: .pre-commit-config.yaml  Makefile  README.md  ansible.cfg  playbook.yml  pyproject.toml
roles/wakemeops/: README.md
roles/wakemeops/meta/: main.yml
roles/wakemeops/molecule/default/: converge.yml  molecule.yml  verify.yml
roles/wakemeops/tasks/: main.yml
