[project]
name = "amorce"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
license = "BlueOak-1.0.0"
authors = [
  { name = "Samuel MARLHENS", email = "samuel.marlhens@proton.me" },
]
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "ansible>=11.3.0",
]

[dependency-groups]
dev = [
  "ansible-lint>=25.1.3",
  "molecule>=25.3.1",
  "molecule-plugins[docker]>=23.7.0",
]

[project.urls]
homepage = "https://github.com/smarlhens/amorce#readme"
repository = "https://github.com/smarlhens/amorce"
